<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_box_list">

    <fragment
        android:id="@+id/nav_box_list"
        android:name="com.example.preordained.ui.dice.DiceBoxListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dice_box_list" />

    <fragment
        android:id="@+id/nav_free_box"
        android:name="com.example.preordained.ui.dice.FreeBoxFragment"
        android:label="@string/dice_free_box_title"
        tools:layout="@layout/fragment_free_box" />

    <fragment
        android:id="@+id/nav_preset_box"
        android:name="com.example.preordained.ui.dice.PresetRollFragment"
        android:label="@string/dice_preset_title"
        tools:layout="@layout/fragment_preset_roll">
        <argument
            android:name="presetIndex"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_coin"
        android:name="com.example.preordained.ui.coin.CoinFragment"
        android:label="@string/menu_coin"
        tools:layout="@layout/fragment_coin" />
</navigation>